[tool.poetry]
name = "dhos-audit-api"
version = "0.0.1"
description = "Audit API to manage audit logs in Polaris"
authors = ["Adam Romano <adam.romano@sensynehealth.com>"]
keywords = ["Audit", "Log", "Polaris"]
repository = "https://github.com/polaris-foundation/polaris-audit-api"

[tool.poetry.dependencies]
python = "^3.9"
she-logging = "1.*"
flask-batteries-included = {"version"= "3.*", extras=["pgsql", "apispec"]}

[tool.poetry.dev-dependencies]
bandit = "*"
black = "*"
coloredlogs = "*"
coverage = "*"
isort = "*"
mock = "*"
mypy = "*"
pytest = "*"
pytest-dhos = {version = "*", extras=["fbi"]}
pytest-flask = "*"
pytest-mock = "*"
requests_mock = "*"
sadisplay = "*"
safety = "*"
tox = "*"
types-PyYAML = "*"
types-requests = "*"

[tool.mypy]
namespace_packages=true
ignore_missing_imports=false
disallow_untyped_defs=true

[[tool.mypy.overrides]]
module = [
    "requests_mock",
    "pytest",
    "environs",
    "jose",
    "waitress",
    "connexion",
    "pytest_mock",
    "apispec.*",
    "apispec_webframeworks.*",
    "sadisplay",
    "sqlalchemy.*",
    "flask_sqlalchemy"
]
ignore_missing_imports = true

[tool.isort]
profile = "black"
known_third_party = ["alembic", "apispec", "apispec_webframeworks", "assertpy", "behave", "click", "clients", "connexion", "environs", "flask", "flask_batteries_included", "helpers", "jose", "marshmallow", "pytest", "reporting", "reportportal_behave", "requests", "sadisplay", "she_logging", "sqlalchemy", "waitress", "yaml"]

[tool.black]
line-length = 88
target-version = ["py39"]
